--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -75,6 +75,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <classifier>jakarta</classifier>
+            <version>${querydsl.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
