--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,17 @@
 		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+<dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
+			<classifier>jakarta</classifier>
+			<version>${querydsl.version}</version>
+		</dependency>
 
+	</dependencies>
+</dependencyManagement>
 	<build>
 		<pluginManagement>
 			<plugins>
